Fixed align of carousel items

--- a/src/components/References/Partners/Partners.scss
+++ b/src/components/References/Partners/Partners.scss
@@ -7,6 +7,8 @@
     }
 
     &__item {
+        align-self: center;
+        justify-self: center;
     }
     &__image {
         display: grid;
